Removed email requirement, made to do's for heat.min.js and index.css

--- a/index.css
+++ b/index.css
@@ -99,7 +99,7 @@ h2 {
 #working {
 	text-align: center;
 }
-
+/* TODO: change control box so that it doesn't get in the way of the map */
 #controls {
   z-index: 99999;
   position: absolute;
@@ -211,10 +211,10 @@ h2 {
 }
 
 @keyframes bouncedelay {
-  0%, 80%, 100% { 
+  0%, 80%, 100% {
     transform: scale(0.0);
     -webkit-transform: scale(0.0);
-  } 40% { 
+  } 40% {
     transform: scale(1.0);
     -webkit-transform: scale(1.0);
   }
@@ -226,16 +226,6 @@ h2 {
   text-align: center;
 }
 
-input#email {
-  font-size: 16px;
-  font-family: PTSans, Helvetica, Arial, sans-serif;
-  border-radius: 2px;
-  background-color: white;
-  padding: 6px 6px;
-  min-width: 200px;
-  border: 1px solid #ccc;
-  outline: 0;
-}
 
 button#launch {
   font-family: PTSans, Helvetica, Arial, sans-serif;
