--- a/index.css
+++ b/index.css
@@ -109,11 +109,27 @@ h2 {
   div will always reveal the *correct* top part. When we expand it later (on hover),
   we set height back to auto, so that all the content is shown correctly. Slightly
   hacky, yes, but it appears to be working in all browsers. A Good Thing. */
-  height: 200px;
+  height: 133px;
   left: 0px;
   margin: 0px 10px;
   padding: 3px 16px 5px;
   background-color: rgba(255,255,255,0.7);
+  transition: bottom 0.1s;
+}
+
+.map-active #controls {
+  bottom: -106px;
+}
+
+#controls:hover {
+  bottom: 0px;
+  left: 0px;
+  height: auto;
+  background-color: rgba(255,255,255,0.9);
+}
+
+#controls:hover .title span {
+  opacity: 0;
 }
 
 #controls .title {
