--- a/index.css
+++ b/index.css
@@ -114,13 +114,13 @@ h2 {
   margin: 0px 10px;
   padding: 3px 16px 5px;
   background-color: rgba(255,255,255,0.7);
-  transition: bottom 0.1s;
+  transition: bottom 0.5s;
 }
 
 .map-active #controls {
-  bottom: -106px;
+  bottom: 106px;
 }
-
+/*
 #controls:hover {
   bottom: 0px;
   left: 0px;
@@ -131,7 +131,7 @@ h2 {
 #controls:hover .title span {
   opacity: 0;
 }
-
+*/
 #controls .title {
   text-align: center;
   font-weight: bold;
